--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -34,6 +34,12 @@
 \def\RuleSet{{\mathcal S}}
 \def\Cap{\text{cap}}
 \def\Supp{\text{supp}}
+\def\InitialObj{R^0}
+\def\InitialRL{d^0}
+\def\CurrentObj{R^c}
+\def\CurrentRL{d^c}
+\def\OptimalObj{R^*}
+\def\OptimalRL{d^*}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
