--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -40,6 +40,7 @@
 \def\CurrentRL{d^c}
 \def\OptimalObj{R^*}
 \def\OptimalRL{d^*}
+\DeclareMathOperator*{\argmin}{argmin}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
@@ -53,6 +54,7 @@
 \newtheorem{definition}{Definition}
 \newtheorem{proposition}{Proposition}
 \newtheorem{claim}{Claim}
+\newtheorem{corollary}{Corollary}
 
 \newcommand{\noi}{\noindent}
 \newcommand{\nn}{\nonumber}
