--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -41,6 +41,7 @@
 \def\OptimalObj{R^*}
 \def\OptimalRL{d^*}
 \DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
